Fixed popup jumps in Firefox

--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -3,6 +3,7 @@
 html {
     background-color: var(--color-bg);
     color: var(--color-text);
+    height: 15rem;
     width: 11rem;
 }
 
